# among-us-replayer

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml  tagged-release.yml
res/: config.json
res_hq/: config.json
source/: app.cpp  app.hpp  main.cpp
source/replay/: replay.cpp  replay.hpp
source/resources/: cache.cpp  cache.hpp  config.cpp  config.hpp  font.cpp  font.hpp  textured_sprite.cpp  textured_sprite.hpp
source/scene/: camera.cpp  camera.hpp  map.cpp  map.hpp  player.cpp  player.hpp
source/ui/: file_dialog.cpp  file_dialog.hpp  player.cpp  player.hpp  utils.cpp  utils.hpp
source/util/: app_info.hpp  platform.cpp  platform.hpp
